<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.org.OptionsActivity"
    android:background="#e8e8e8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indstillinger"
        android:id="@+id/mainmenuTitle"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchSound"
        android:checked="false"
        android:text="@string/lyd"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/switchOnline"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchOnline"
        android:checked="false"
        android:text="@string/online"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/switchSound"
        android:layout_marginBottom="165dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchMusic"
        android:checked="false"
        android:text="@string/musik"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:layout_above="@+id/switchSound"
        android:layout_alignEnd="@+id/switchSound" />

</RelativeLayout>
