<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.org.MainActivity"
    android:background="#ffffff">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:elevation="50dp"
        android:textStyle="bold"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageViewMenu"
        android:layout_marginStart="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quitButton"
        android:textStyle="bold"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/imageViewMenu"
        android:layout_marginEnd="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/galgeleg_v3"
        android:id="@+id/mainmenuTitle"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewMenu"
        android:minHeight="200dp"
        android:src="@drawable/hang6"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
